instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:8: error: not found: value foroward
  foroward();
  ^